experiments/multi-root-grammar/variant/grammar.js
    document: $ => choice(
      prec(5, $.full_document),    // complete @UTF8...@Begin...@End file
      prec(4, $.utterance),        // main tier + dependent tiers
      prec(3, $.main_tier),        // single *SPEAKER:\tcontent terminator
      prec(3, $.dependent_tier),   // single %tier:\tcontent
      prec(3, $.header),           // single @Header:\tcontent
      prec(3, $.pre_begin_header), // @PID, @Font, @Window, @Color words
      prec(1, $.mor_contents),     // bare mor words: v|want qn|more
      prec(1, $.gra_contents),     // bare gra relations: 1|2|SUBJ 2|0|ROOT
      prec(0, $.contents),         // bare main tier content: hello world .
    ),

    // Full CHAT document structure:
    // 1. @UTF8 (required, must be first non-whitespace content)
    // 2. Optional pre-@Begin headers (@PID, @Color words, @Window, @Font)
    // 3. @Begin (effectively required, but optional for lenient parsing)
    // 4. Main content headers and utterances
    // 5. @End (effectively required, but optional for lenient parsing)
    newline: $ => /[\r\n]+/,

    star: $ => '*',       // Main tier prefix marker
    hyphen: $ => '-',     // Used in MOR suffixes and other contexts

    space: $ => ' ',
    tab: $ => '\t',

    // Matches all non-newline characters to end of line.
    // Used as a building block for free-text header values and catch-all content.
    rest_of_line: $ => /[^\r\n]+/,

    // Text segment that doesn't contain bullet markers or newlines
    // Used in text_with_bullets for content between bullets
    period: $ => '.',
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#QuestionMark_Terminator
    trailing_off: $ => token(prec(10, '+...')),              // +... Speaker trails off
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Interruption_Terminator
    interruption: $ => token(prec(10, '+/.')),               // +/. Interrupted by another speaker
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#SelfInterruption_Terminator
    pipe: $ => '|',
    comma: $ => ',',
    free_text: $ => repeat1(choice(
      $.rest_of_line,
      $.continuation  // External continuation token
    )),

    line: $ => choice(
      $.header,
      $.utterance,
      $.unsupported_line,
    ),

    // Catch-all for lines that don't start with *, @, or % — prevents ERROR
    // cascade when junk lines appear in CHAT files.  The Rust parser will
    // report a validation warning and skip these.
    utf8_header: $ => seq(token('@UTF8'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Begin_Header
    // OPTIMIZATION: token('@Begin') reduces states vs seq(at_sign, 'Begin')
    begin_header: $ => seq(token('@Begin'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Languages_Header
    // OPTIMIZATION: token('@Languages') reduces states; whitespace handled by header_sep
    languages_header: $ => seq(
      $.languages_prefix,
      $.header_sep,
      $.languages_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Participants_Header
    // OPTIMIZATION: token('@Participants') reduces states; whitespace handled by header_sep
    participants_header: $ => seq(
      $.participants_prefix,
      $.header_sep,
      $.participants_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#ID_Header
    // OPTIMIZATION: token('@ID') reduces states; whitespace handled by header_sep
    id_header: $ => seq(
      $.id_prefix,
      $.header_sep,
      $.id_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#End_Header
    // OPTIMIZATION: token('@End') reduces states vs seq(at_sign, 'End')
    end_header: $ => seq(token('@End'), $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Birth_Header
    // ANTLR: birthof: BIRTHOF whoChecked COLON TAB DATE_ALL NEWLINE
    // Birth of takes a specific date format, not free_text
    media_header: $ => seq($.media_prefix, $.header_sep, $.media_contents, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Location_Header
    location_header: $ => seq($.location_prefix, $.header_sep, $.free_text, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Number_Header
    transcriber_header: $ => seq($.transcriber_prefix, $.header_sep, $.free_text, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Transcription_Header
    activities_header: $ => seq($.activities_prefix, $.header_sep, $.free_text, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Bck_Header
    situation_header: $ => seq($.situation_prefix, $.header_sep, $.free_text, $.newline),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Page_Header
    utterance: $ => seq(
      $.main_tier,
      repeat($.dependent_tier)
    ),

    // Main tier content after the tab — content is required
    // Used by: main_tier (*SPEAKER:\t)
    // NOTE: No leading/trailing optional(whitespaces) — contents handles its own whitespace
    tier_body: $ => seq(
      field('linkers', optional($.linkers)),
      field('language_code', optional(
        seq(
          $.langcode,
          $.whitespaces
        )
      )),
      field('content', $.contents),
      field('ending', $.utterance_end)
    ),

    // %wor tier body — word-level timing tier.
    // Flat whitespace-separated sequence: words, inline bullets, and separators.
    // Whitespace is always required between items (it's the only separator).
    // The Rust parser pairs words with following inline_bullet by adjacency.
    main_tier: $ => seq(
      $.star,
      field('speaker', $.speaker),
      $.colon,
      $.tab,
      $.tier_body
    ),

    // ANTLR: uend: anyTerminator finalCodes? (NEWLINE | url NEWLINE)
    // finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET (postcode annotations)
    // url: URL milliseconds BULLET_UNDERSCORE milliseconds (BULLET_URL | BULLET_URL_SKIP)
    // Utterance ending: terminator + postcodes + media bullet + newline
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Utterance_Terminator
    // NOTE: Space before terminator is consumed by contents rule's trailing whitespace.
    // Space before media_url and trailing whitespace must be handled here (post-terminator).
    utterance_end: $ => seq(
      // Terminator section - optional in CA transcription mode
      optional($.terminator),
      // Postcode annotations: [+ bch], [+ foo], etc.
      optional($.final_codes),
      // Optional media bullet
      optional(seq(optional($.whitespaces), $.media_url)),
      optional($.whitespaces),  // Allow trailing whitespace before newline
      $.newline
    ),

    // ANTLR: finalCodes: finalCode+ where finalCode is SSEXT anyWordsAndMedia RBRACKET
    // SSEXT = "[+ " so finalCode is postcode annotations like [+ bch], [+ foo]
    // Note: SSEXT includes the space, so no additional space needed before each annotation
    // But there can be spaces between multiple postcode annotations
    base_content_item: $ => choice(
      $.underline_begin,
      $.underline_end,
      $.pause_token,
      $.word_with_optional_annotations,
      $.nonword_with_optional_annotations,
      $.other_spoken_event,
      $.long_feature,
      $.nonvocal,
      $.freecode,
      $.media_url,
    ),

    // Separator is its own first-class content item (not attached to preceding content)
    // Uses named leaf nodes for type-safe node dispatch
    content_item: $ => choice(
      $.base_content_item,
      $.group_with_annotations,
      $.quotation,
      $.main_pho_group,
      $.main_sin_group,
    ),

    // Other speaker's speech event, e.g., &*MOT:word — speech attributed to another speaker.
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Local_Event
    contents: $ => repeat1(choice(
      $.whitespaces,
      $.content_item,
      $.separator,
      $.overlap_point,
    )),

    // NOTE: No optional whitespace wrappers — contents handles its own whitespace
    word_with_optional_annotations: $ => seq(
      field('word', $.standalone_word),
      optional(seq(
        optional($.whitespaces),
        field('replacement', $.replacement)
      )),
      field('annotations', optional($.base_annotations))
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Group_Scopes
    // Group with annotations: <content> [annotation]
    // Groups MUST have annotations - cannot be standalone (ANTLR: annotatedGroup)
    // Example: <I dunno> [?] - uncertain transcription of phrase
    // NOTE: No optional whitespace wrappers — contents handles its own whitespace
    standalone_word: $ => token(prec(5,
      /(&[~+\-]|0)?[^0&:\s\[\]<>\u0015\u0003\u0004\u0007\u0008.?!,;\{\}\u21D7\u2197\u2192\u2198\u21D8\u2248\u224B\u221E\u2261\u201E\u2021\u2039\u203A\u201C\u201D\u3014\u3015]([^\s\[\]<>\u0015\u0003\u0004\u0007\u0008.?!,;\{\}\u21D7\u2197\u2192\u2198\u21D8\u2248\u224B\u221E\u2261\u201E\u2021\u2039\u203A\u201C\u201D\u3014\u3015]*[^\s\[\]<>\u0015\u0003\u0004\u0007\u0008.?!,;\{\}+\u21D7\u2197\u2192\u2198\u21D8\u2248\u224B\u221E\u2261\u201E\u2021\u2039\u203A\u201C\u201D\u3014\u3015])?/
    )),
    // Label token for long features and nonvocal markers
    // Allows alphanumeric plus @ % _ - symbols
    // Used in: long_feature_begin, long_feature_end, nonvocal_begin, nonvocal_end, nonvocal_simple
    mor_dependent_tier: $ => seq(
      $.mor_tier_prefix,
      $.tier_sep,
      $.mor_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Phonology_Tier
    gra_dependent_tier: $ => seq(
      $.gra_tier_prefix,
      $.tier_sep,
      $.gra_contents,
      $.newline
    ),

    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Orthography_Tier
    // Tiers that can contain text with inline bullets
    colon: $ => ':',

    // Chat.flex: WHO = [A-Za-z0-9_\'+\-]+ (exact match)
    speaker: $ => /[A-Za-z0-9_\'+\-]+/, 

    // ============================================================================
    // MORPHOLOGY (MOR) TIER INTERNALS
    // ============================================================================
    // The %mor tier contains UD-style morphological analysis aligned word-by-word
    // with the main tier. Each MOR word has this structure:
    //
    //   POS|lemma[-Feature]*
    //
    // Words can be connected by post-clitics (MWT expansions from Stanza):
    //   - Post-clitics: ~word  (e.g., pron|I~aux|be-Fin-Ind-Pres-S1)
    //
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Morphological_Tier
    // ============================================================================

    // Can have zero content with only terminator.
    // Terminator is optional - aligner validates matching with main tier.
    mor_contents: $ => seq(
      choice(
        // Pattern 1: Items with optional terminator
        seq(
          $.mor_content,                              // First item (required)
          repeat(seq($.whitespaces, $.mor_content)),  // Additional items
          optional(seq($.whitespaces, $.terminator))  // Optional terminator
        ),
        // Pattern 2: Just terminator (e.g., "%mor:\t.")
        $.terminator
      ),
      optional($.whitespaces)  // Trailing whitespace before newline
    ),

    // MOR content: main word + optional post-clitics (NO pre-clitics, NO translation)
    mor_content: $ => seq(
      field('main', $.mor_word),
      field('post_clitics', repeat($.mor_post_clitic))
    ),

    // morPostClitic = TILDE morWord
    mor_word: $ => seq(
      $.mor_pos,                  // UPOS tag (simple identifier)
      $.pipe,                     // |
      $.mor_lemma,                // lemma (opaque Unicode string)
      repeat($.mor_feature)       // -Feature chains
    ),

    // Simple POS tag — no colons, no subcategories
    // Allows: Unicode letters, digits
    // Excludes: | - ~ + . ? ! # $ @ % = & : , [ ] < > ( ) space
    mor_pos: $ => /[^\.\?\!\|\+~\$#@%=&\[\]<>()\-:,\s\r\n\u201C\u201D]+/,

    // Lemma — opaque string, allows = (Estonian compound boundary), ! (Basque
    // derivational boundary), apostrophe, underscore, en-dash, colon, comma,
    // and all Unicode letters/digits.
    // First char excludes = & # ! to prevent legacy-format ambiguity.
    // Excludes: | (POS/lemma sep), - (feature sep), ~ (clitic), + . ? space, and CHAT markers
    mor_lemma: $ => /[^\.\?\!\|\+~\$#@%=&\[\]<>()\-\s\r\n\u201C\u201D][^\.\?\|\+~\-\s\r\n]*/,

    // Feature: -Value (commas allowed within value, e.g., -Int,Rel)
    gra_contents: $ => seq(
      $.gra_relation,
      repeat(
        seq(
          $.whitespaces,
          $.gra_relation
        )
      )
    ),

    // GRA relation: index|head|relation (dependency structure)
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Grammatical_Relations
    // Example: 1|2|SUBJ means word 1 is subject of word 2
    gra_relation: $ => seq(
      field('index', $.gra_index),
      $.pipe,
      field('head', $.gra_head),
      $.pipe,
      field('relation', $.gra_relation_name)
    ),

    gra_index: $ => /[0-9]+/, 

    gra_head: $ => /[0-9]+/, 

    // Chat.flex: GRA_RELATION = [A-Z] [A-Z0-9\-]*
    gra_relation_name: $ => /[A-Z][A-Z0-9\-]*/,

    // ============================================================================
    // PHONOLOGY (PHO) & SIGN (SIN) TIERS
    // ============================================================================
    // %pho: phonological transcription in IPA, one word per main tier word.
    //   Words can be grouped with ‹...› delimiters for multi-word grouping.
    //   Plus (+) joins compound words.
    //
    // %sin: sign/gesture notation, one entry per main tier word.
    //   Words can be grouped with 〔...〕 delimiters.
    //   Supports colon-separated structures (e.g., g:toy:dpoint).
    //
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Phonology_Tier
    // Reference: https://talkbank.org/0info/manuals/CHAT.html#Sign_Tier
    // ============================================================================

    languages_contents: $ => seq(
      $.language_code,
      repeat(seq(
        optional($.whitespaces),   // Zero or more whitespace before comma
        $.comma,
        $.whitespaces,             // One or more whitespace after comma (required)
        $.language_code
      ))
    ),

    // Language codes like "eng", "fra", "deu", "zho", "ind", "jav" etc.
    // Lower precedence to avoid conflicts with word_segment in main content
    language_code: $ => /[a-z]{2,4}/, 

    // ANTLR: mediaInfo: mediaHeaderFilename COMMA_SPACE mediaTypes
    // mediaHeaderFilename: MEDIA_URL | BULLET_FILENAME
    // mediaTypes: (MEDIA_TYPE COMMA_SPACE)* MEDIA_TYPE
    media_contents: $ => seq(
      $.media_filename,
      $.comma,
      $.whitespaces,
      $.media_type,
      optional(seq(
        $.comma,
        $.whitespaces,
        $.media_status
      ))
    ),

    // Media filename - can be quoted URLs or simple filenames
    media_filename: $ => choice(
      seq($.double_quote, /[^"\r\n]+/, $.double_quote),  // Quoted URLs like "https://..."
      /[a-zA-Z0-9_-]+/         // Simple filenames like "media-file"
    ),

    media_type: $ => choice($.video_value, $.audio_value, $.missing_value, $.generic_media_type),
    id_contents: $ => seq(
      $._id_identity_fields,
      $._id_demographic_fields,
      $._id_role_fields
    ),

    // Identity fields: language, corpus, speaker - who is this participant?
    // optional($.whitespaces) around optional fields so the grammar consumes
    // leading/trailing spaces instead of including them in field text.
    id_corpus: $ => /[^ \t|\r\n]([^|\r\n]*[^ \t|\r\n])?/,
    id_speaker: $ => /[^|\r\n]*/,         // Required — no trimming needed
    tier_sep: $ => seq($.colon, $.tab),
