experiments/multi-root-grammar/variant/test/corpus/errors/e501_1.txt
================================================================================
E501_1 - generated from corpus
================================================================================
@UTF8
@Begin
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@End

--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (ERROR (unsupported_header_prefix) (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (pipe) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (end_header (newline)))
