experiments/multi-root-grammar/variant/test/corpus/errors/e703.txt
================================================================================
E703 - E703: Unexpected morphology node
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
*CHI:	hello .
%mor:	||||| .
@End

--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (pipe) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (line (utterance (main_tier (star) speaker: (speaker) (colon) (tab) (tier_body content: (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces)) ending: (utterance_end (period) (newline)))) (mor_dependent_tier (mor_tier_prefix) (tier_sep (colon) (tab)) (ERROR (pipe) (pipe) (pipe) (pipe) (pipe) (space)) (mor_contents (period)) (newline)))) (end_header (newline)))
