experiments/multi-root-grammar/variant/test/corpus/errors/e721.txt
================================================================================
E721 - sequential index
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
*CHI:	I want cookie .
%mor:	pro|I v|want n|cookie .
%gra:	1|2|SUBJ 3|2|OBJ 2|0|ROOT .
@End

--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (pipe) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (line (utterance (main_tier (star) speaker: (speaker) (colon) (tab) (tier_body content: (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces)) ending: (utterance_end (period) (newline)))) (mor_dependent_tier (mor_tier_prefix) (tier_sep (colon) (tab)) (mor_contents (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma))) (whitespaces) (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma))) (whitespaces) (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma))) (whitespaces) (period)) (newline)) (gra_dependent_tier (gra_tier_prefix) (tier_sep (colon) (tab)) (gra_contents (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name))) (ERROR (whitespaces) (period)) (newline)))) (end_header (newline)))
