experiments/multi-root-grammar/variant/test/corpus/header/languages_single.txt
================================================================================
languages_single - @Languages header with single language code
================================================================================
@UTF8
@Begin
@Languages:	eng
@End


--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (end_header (newline)))
